tests/ui/error-codes/E0608.stderr
error[E0608]: cannot index into a value of type `u8`
  --> $DIR/E0608.rs:2:5
   |
LL |     0u8[2];
   |     ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0608`.
