tests/ui/error-codes/E0608.rs
fn main() {
    0u8[2]; //~ ERROR E0608
}
